force-app/main/default/objects/KimbleOne__TaxCodeApplicability__c/KimbleOne__TaxCodeApplicability__c.object-meta.xml
<CustomObject>
    <label>Tax Code Applicability</label>
    <nameField>
        <label>Tax Code Applicability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Code Applicabilities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>