force-app/main/default/objects/KimbleOne__TaxCodeApplicability__c/fields/KimbleOne__ActivityAssignmentLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignmentLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Assignment Location</label>
    <referenceTo>KimbleOne__Location__c</referenceTo>
    <relationshipLabel>Tax Code Applicabilities (Assignment Location)</relationshipLabel>
    <relationshipName>TaxCodeApplicabilitiesActAssLocation</relationshipName>
    <type>Lookup</type>
</CustomField>