force-app/main/default/objects/KimbleOne__TaxCodeApplicability__c/fields/KimbleOne__InputTaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InputTaxCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Input Tax Code</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Tax Code Applicabilities</relationshipLabel>
    <relationshipName>InputTaxCodeApplicabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>