force-app/main/default/objects/KimbleOne__TaxCodeApplicability__c/fields/KimbleOne__ResourceLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Location</label>
    <referenceTo>KimbleOne__Location__c</referenceTo>
    <relationshipLabel>Tax Code Applicabilities (Resource Location)</relationshipLabel>
    <relationshipName>TaxCodeApplicabilitiesResourceLocation</relationshipName>
    <type>Lookup</type>
</CustomField>